ATCclient/atc-client-app/src/App.css
.App {
  text-align: center;
}

@media (prefers-reduced-motion: no-preference) {
  .App-logo {
    animation: App-logo-spin infinite 20s linear;
  }
}

.App-header {
  background-color: #282c34;
  min-height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-size: calc(10px + 2vmin);
  color: white;
}

.App-link {
  color: #61dafb;
}

@keyframes App-logo-spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}


.leaflet-container {
  height: 95.5vh;
  width: 80vi;
}

.leaflet-tooltip.myTooltip
{
  background-color: transparent;
  border-color: transparent;
  border: 0px;
  color:white;
  box-shadow: none;
}

.leaflet-tooltip-bottom:before {
  border: 0 !important;
}

.myClass
{
  background-color:rgb(66, 216, 66);
}

button {
  font-family: Arial;
  color: #000000;
  font-size: 15px;
  background: #ffffff;
  padding: 8px 8px 8px 8px;
  text-decoration: none;
  position:static;
  top:10%;
  left:10%;
}

button:hover {
  opacity: 70%;
  text-decoration: none;
}

.Container
{
  display: inline-flex;
}

.ChatWindow
{
  border:#000000;
  border-width: 2px;
  border-style: solid;
  width: 18.5vi;
  height: 66vh;
  font-size: 20px;
  padding: 0px;
}

.AircraftList
{
  border:#000000;
  border-width: 2px;
  border-style: solid;
  width: 18.5vi;
  height: 26.7vh;
}

.Input
{
  padding: 0px;
  margin: 0px;
  width: 18.5vi;
  height: 6vh;
  font-size: 20px;
}

.Command
{
  color: red;
}

.ButtonTray
{
  display: inline-flex;
}

